aligned buttons under table and fixed width

--- a/client/src/app/race/results/results.component.css
+++ b/client/src/app/race/results/results.component.css
@@ -51,6 +51,7 @@ li {
 }
 
 table { 
+    width: 100%;
     border-collapse: collapse;
 }
 
@@ -65,5 +66,14 @@ h3 {
 }
 
 .player {
-    background-color: #0099dd;
+    background-color: #50b0da;
+}
+
+#options {
+    margin-top: 2%;
+    vertical-align: middle;
+}
+
+#options > button:last-child {
+    float: right;
 }
