--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -41,6 +41,11 @@ button:focus {
 	outline: 0px;
 }
 
+button:disabled {
+    opacity: 0.65; 
+    cursor: not-allowed;
+}
+
 -button:hover, button.active {
     background-color: #0099dd;
     box-shadow: 0 2px 12px rgba(0,0,0,0.6);
